Replace DatatypeConverter -> Base64